--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\OpenLR.Binary\packages.config" />
   <repository path="..\OpenLR.Tests\packages.config" />
   <repository path="..\OpenLR\packages.config" />
 </repositories>
