--- a/OpenLR.Binary/OpenLR.Binary.csproj
+++ b/OpenLR.Binary/OpenLR.Binary.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="BinaryDecoder.cs" />
     <Compile Include="Data\CoordinateConverter.cs" />
+    <Compile Include="Data\FormOfWayConvertor.cs" />
     <Compile Include="Data\FunctionalRoadClassConvertor.cs" />
     <Compile Include="Decoders\LineLocationDecoder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
