--- a/OpenLR.Tests/OpenLR.Tests.csproj
+++ b/OpenLR.Tests/OpenLR.Tests.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Binary\Data\FormOfWayConvertorTests.cs" />
     <Compile Include="Binary\Data\FunctionalRoadClassConvertorTests.cs" />
     <Compile Include="Binary\GeoCoordinateTests.cs" />
+    <Compile Include="Binary\GridLocationTests.cs" />
     <Compile Include="Binary\LineLocationTests.cs" />
     <Compile Include="Binary\PointAlongLineTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
