--- a/OpenLR/packages.config
+++ b/OpenLR/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="OsmSharp" version="4.0.2.581" targetFramework="portable-net45+sl40+wp80+win" />
-  <package id="protobuf-net" version="2.0.0.668" targetFramework="portable-net45+sl40+wp80+win" />
-  <package id="Zlib.Portable" version="1.9.2" targetFramework="portable-net45+sl40+wp80+win" />
+  <package id="OsmSharp" version="4.0.2.581" targetFramework="portable-net45+sl40+wp80+win" requireReinstallation="True" />
+  <package id="protobuf-net" version="2.0.0.668" targetFramework="portable-net45+sl40+wp80+win" requireReinstallation="True" />
+  <package id="Zlib.Portable" version="1.9.2" targetFramework="portable-net45+sl40+wp80+win" requireReinstallation="True" />
 </packages>
