--- a/OpenLR.Tests/OpenLR.Tests.csproj
+++ b/OpenLR.Tests/OpenLR.Tests.csproj
@@ -70,6 +70,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Binary\CircleLocationTests.cs" />
+    <Compile Include="Binary\ClosedLineLocationTests.cs" />
     <Compile Include="Binary\Data\CoordinateEncodingTests.cs" />
     <Compile Include="Binary\Data\BearingConvertorTests.cs" />
     <Compile Include="Binary\Data\FormOfWayConvertorTests.cs" />
