Finished binary decoding of PoiWithAccessPointLocation. Fixes #7.

--- a/OpenLR.Binary/OpenLR.Binary.csproj
+++ b/OpenLR.Binary/OpenLR.Binary.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Decoders\GridLocationDecoder.cs" />
     <Compile Include="Decoders\LineLocationDecoder.cs" />
     <Compile Include="Decoders\PointAlongLineDecoder.cs" />
+    <Compile Include="Decoders\PoiWithAccessPointLocationDecoder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
