Finished binary decoding of RectangleLocation. Fixes #9.

--- a/OpenLR.Binary/OpenLR.Binary.csproj
+++ b/OpenLR.Binary/OpenLR.Binary.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Decoders\PointAlongLineDecoder.cs" />
     <Compile Include="Decoders\PoiWithAccessPointLocationDecoder.cs" />
     <Compile Include="Decoders\PolygonLocationDecoder.cs" />
+    <Compile Include="Decoders\RectangleLocationDecoder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
