Finished referenced decoding of GeoCoordinateLocation. Closes #12.

--- a/OpenLR.OsmSharp/OpenLR.OsmSharp.csproj
+++ b/OpenLR.OsmSharp/OpenLR.OsmSharp.csproj
@@ -60,6 +60,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Decoding\GeoCoordinateGraph.cs" />
+    <Compile Include="Decoding\GeoCoordinateGraphDecoder.cs" />
     <Compile Include="Decoding\GraphDecoder.cs" />
     <Compile Include="Decoding\LineLocationGraph.cs" />
     <Compile Include="Decoding\LineLocationGraphDecoder.cs" />
