--- a/OpenLR.OsmSharp/OpenLR.OsmSharp.csproj
+++ b/OpenLR.OsmSharp/OpenLR.OsmSharp.csproj
@@ -60,11 +60,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Decoding\GeoCoordinateGraph.cs" />
-    <Compile Include="Decoding\GeoCoordinateGraphDecoder.cs" />
-    <Compile Include="Decoding\GraphDecoder.cs" />
-    <Compile Include="Decoding\LineLocationGraph.cs" />
-    <Compile Include="Decoding\LineLocationGraphDecoder.cs" />
+    <Compile Include="Decoding\ReferencedGeoCoordinate.cs" />
+    <Compile Include="Decoding\ReferencedGeoCoordinateDecoder.cs" />
+    <Compile Include="Decoding\ReferencedDecoder.cs" />
+    <Compile Include="Decoding\ReferencedLine.cs" />
+    <Compile Include="Decoding\ReferencedLineDecoder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
