--- a/OpenLR.Tests/OpenLR.Tests.csproj
+++ b/OpenLR.Tests/OpenLR.Tests.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Binary\Data\BearingConvertorTests.cs" />
     <Compile Include="Binary\Data\FormOfWayConvertorTests.cs" />
     <Compile Include="Binary\Data\FunctionalRoadClassConvertorTests.cs" />
+    <Compile Include="Binary\Data\OrientationConvertorTests.cs" />
     <Compile Include="Binary\GeoCoordinateTests.cs" />
     <Compile Include="Binary\GridLocationTests.cs" />
     <Compile Include="Binary\LineLocationTests.cs" />
