--- a/OpenLR.Tests/OpenLR.Tests.csproj
+++ b/OpenLR.Tests/OpenLR.Tests.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Binary\Data\FormOfWayConvertorTests.cs" />
     <Compile Include="Binary\Data\FunctionalRoadClassConvertorTests.cs" />
     <Compile Include="Binary\Data\OrientationConvertorTests.cs" />
+    <Compile Include="Binary\Data\SideOfRoadConvertorTests.cs" />
     <Compile Include="Binary\GeoCoordinateTests.cs" />
     <Compile Include="Binary\GridLocationTests.cs" />
     <Compile Include="Binary\LineLocationTests.cs" />
