--- a/OpenLR/OpenLR.csproj
+++ b/OpenLR/OpenLR.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Decoding\Decoder.cs" />
     <Compile Include="Encoding\Encoder.cs" />
+    <Compile Include="Facade.cs" />
     <Compile Include="ILocationReference.cs" />
     <Compile Include="Locations\CircleLocation.cs" />
     <Compile Include="Locations\ClosedLineLocation.cs" />
@@ -65,6 +66,7 @@
     <Compile Include="Model\Orientation.cs" />
     <Compile Include="Model\SideOfRoad.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Referenced\Decoding\IReferencedDecoder.cs" />
     <Compile Include="Referenced\Decoding\ReferencedDecoder.cs" />
     <Compile Include="Referenced\Encoding\ReferencedEncoder.cs" />
     <Compile Include="Referenced\ReferencedLocation.cs" />
