Refactoring of decoders. Made initialization of decoders more convenient.

--- a/OpenLR.Binary/OpenLR.Binary.csproj
+++ b/OpenLR.Binary/OpenLR.Binary.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BinaryDecoder.cs" />
+    <Compile Include="BinaryLocationDecoder.cs" />
     <Compile Include="Data\CoordinateConverter.cs" />
     <Compile Include="Data\FormOfWayConvertor.cs" />
     <Compile Include="Data\BearingConvertor.cs" />
