--- a/OpenLR.OsmSharp/OpenLR.OsmSharp.csproj
+++ b/OpenLR.OsmSharp/OpenLR.OsmSharp.csproj
@@ -95,6 +95,8 @@
     <Compile Include="Decoding\Scoring\CombinedScoreComparer.cs" />
     <Compile Include="Decoding\Scoring\CombinedScore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReferencedDecoderBase.cs" />
+    <Compile Include="ReferencedLiveEdgeDecoder.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
