Added conversion methods to convert location to NTS features.

--- a/OpenLR.OsmSharp/OpenLR.OsmSharp.csproj
+++ b/OpenLR.OsmSharp/OpenLR.OsmSharp.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Decoding\ReferencedRectangleDecoder.cs" />
     <Compile Include="Decoding\Scoring\CombinedScoreComparer.cs" />
     <Compile Include="Decoding\Scoring\CombinedScore.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReferencedDecoderBase.cs" />
     <Compile Include="ReferencedLiveEdgeDecoder.cs" />
