Added a lot of encoding code and fixed header decoding encoding and checking.

--- a/OpenLR.Binary/OpenLR.Binary.csproj
+++ b/OpenLR.Binary/OpenLR.Binary.csproj
@@ -64,7 +64,7 @@
     <Compile Include="Decoders\PoiWithAccessPointLocationDecoder.cs" />
     <Compile Include="Decoders\PolygonLocationDecoder.cs" />
     <Compile Include="Decoders\RectangleLocationDecoder.cs" />
-    <Compile Include="Encoders\PointAlongLineLocationEncoder.cs" />
+    <Compile Include="Encoders\PointAlongLineEncoder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
