--- a/OpenLR.Binary/OpenLR.Binary.csproj
+++ b/OpenLR.Binary/OpenLR.Binary.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Data\BearingConvertor.cs" />
     <Compile Include="Data\FunctionalRoadClassConvertor.cs" />
     <Compile Include="Data\HeaderConvertor.cs" />
+    <Compile Include="Data\OffsetConvertor.cs" />
     <Compile Include="Data\OrientationConvertor.cs" />
     <Compile Include="Data\SideOfRoadConverter.cs" />
     <Compile Include="Decoders\CircleLocationDecoder.cs" />
