--- a/OpenLR.Tests/OpenLR.Tests.csproj
+++ b/OpenLR.Tests/OpenLR.Tests.csproj
@@ -95,11 +95,13 @@
     <Compile Include="Binary\BinaryDecoderTests.cs" />
     <Compile Include="Binary\CircleLocationTests.cs" />
     <Compile Include="Binary\ClosedLineLocationTests.cs" />
-    <Compile Include="Binary\Data\CoordinateEncodingTests.cs" />
+    <Compile Include="Binary\Data\CombinedConversionTests.cs" />
+    <Compile Include="Binary\Data\CoordinateConvertorTests.cs" />
     <Compile Include="Binary\Data\BearingConvertorTests.cs" />
     <Compile Include="Binary\Data\FormOfWayConvertorTests.cs" />
     <Compile Include="Binary\Data\FunctionalRoadClassConvertorTests.cs" />
     <Compile Include="Binary\Data\HeaderConvertorTests.cs" />
+    <Compile Include="Binary\Data\OffsetConvertorTests.cs" />
     <Compile Include="Binary\Data\OrientationConvertorTests.cs" />
     <Compile Include="Binary\Data\SideOfRoadConvertorTests.cs" />
     <Compile Include="Binary\GeoCoordinateTests.cs" />
